- support use_html option in columns for inplace_edit

= 3.4.26
- fix padding for dynamic action_group inside action_group
- fix using gem with symlink in BUNDLE_PATH option of config/bundle file

= 3.4.25
- call focus_first_element after highlight and trigger element_created
- fix restoring focus to element which triggers update column

= 3.4.24
- allow to set :controller in active_scaffold_record_select_autocomplete parameter or active_scaffold_input_text_options
- fix keeping focus after update_columns when focus was changed to a field which is going to be updated
- no autofocus first input if is inside .no-autofocus tag
- use active_scaffold_enum_options on select search_ui
- add submit_text option for field_search and search partials

= 3.4.23
- fix chosen on new subform rows
- add show_ui to column
- add :vertical and :horizontal show_ui for associations

= 3.4.22
- fix has_one/many tableless model through association
- fix check default value for checkboxes, so if record in subform, with checkbox, is left as default, is not saved, but setting checkbox would save record
- singular associations on subform are not always created, so you can leave default values on fields and skip creation, in other case some validations could fail and force to create singular associations
- fix counter cache on polymorphic for rails 4.2.1
- fix set cursor at end when focusing first element of form

= 3.4.21.1
- Fix field_search when contains is used on rails 4.2

= 3.4.21
- Fix excluding a bridge
- Allow to call helpers from dynamic_parameters proc
- Fix warn when form is changed on create/update loaded on page (without AJAX)
- Fix XSS vulnerability when using to_label with as_ (#425)
- Set cursor at end when focus first element
- Set focus on form.search after search with refresh_with_header

= 3.4.20
- Update tinymce bridge for tinyMCE 4.x
- Ignore :format in conditions_from_params
- column with :radio form_ui works like :select form_ui in list and show