@@ -1,4 +1,5 @@
 - support use_html option in columns for inplace_edit
+- don't add errors added on update_record_from_params to flash[:warning], they are on errors array, keep errors from update_record_from_params when running valid?
 
 = 3.4.26
 - fix padding for dynamic action_group inside action_group
